# integralinator-3000

./: .gitignore  main.py  predict_new.py  pyproject.toml  requirements.txt  run_features_ocs.sh  run_ocs.sh
analysis/: expressions.csv  expressions.pkl  features.csv  features.pkl  features_v1,5.csv  features_v1,5.pkl  features_v2.csv  features_v2.pkl  generate_features.py  generate_op_counts.py  op_counts.csv  op_counts.pkl
baseline_integrals/: random_integrals.py  solvable_integrals.py  utils.py
cli/: main.py
evaluation/: controllability.py  evaluation.py  evaluation_score.py  expression_depth.py  expression_depth_data.py  optimize.py  solvability.py  solvability_result_vectors.py  solvable_controllability_data.py
genetic_algorithm/: fitness.py  ga_operators.py  genetic_.py  genetic_algorithm.py
llm_service/: base_prompts.py  llm_service.py
logs/: features_2085300.out  run_2078381_10.err  run_2078381_10.out  run_2078381_11.err  run_2078381_2.err  run_2078381_4.out  run_2078381_5.err  run_2078381_6.out  run_2078381_8.err  run_2078381_8.out  run_2078381_9.err  run_2080079_0.out  run_2080079_1.out  run_2080079_10.err  run_2080079_10.out  run_2080079_11.err  run_2080079_13.out  run_2080079_14.err  run_2080079_14.out  run_2080079_5.err  run_2080079_7.out  run_2080079_8.err  run_2080079_9.out  run_2081522_11.err  run_2081522_11.out  run_2081522_12.out  run_2081522_14.out  run_2081522_3.out  run_2081522_5.err  run_2081522_5.out  run_2081522_8.err  run_2081522_8.out  run_2082578_1.err  run_2082578_2.err  run_2082667_0.err  run_2082675_0.err  run_2083127_0.out  (+23 more)
(+45 files in other folders)
