[project]
name = "integralinator-3000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "pandas>=3.0.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "treelib>=1.8.0",
    "typst-sympy-calculator>=0.6.2",
    "xgboost>=3.2.0",
]
