[tool.setuptools.packages.find]
include = ["cli*", "llm_service*", "genetic_algorithm*", "baseline_integrals*", "probabilistic_grammar*", "utils*"]

[project]
name = "integralinator-3000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "pandas>=3.0.1",
    "pcfg>=0.1.5",
    "pygad>=3.6.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.6.0",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "treelib>=1.8.0",
    "typst-sympy-calculator>=0.6.2",
    "xgboost>=3.2.0",
    "func-timeout>=4.3.5",
]
